Changed db to be a local db so that it can be accessed without sql server

--- a/Police_CaseHelper/appsettings.json
+++ b/Police_CaseHelper/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContextConnection": "Server=LAPTOP-FJ0CURGI;Initial Catalog=PoliceCaseHelper;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    //"ApplicationDbContextConnection": "Server=LAPTOP-FJ0CURGI;Initial Catalog=PoliceCaseHelper;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "ApplicationDbContextConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\"C:\\Users\\jessi.LAPTOP-FJ0CURGI\\OneDrive\\Documents\\Projects\\Police_CaseHelper\\Police_CaseHelper\\Database Backup\\Police_CaseHelper.mdf\";Integrated Security=True;Connect Timeout=30"
   }
 }
