Updated connection string, Max you will need to change it to your connection string instead of mine.

--- a/Police_CaseHelper/appsettings.json
+++ b/Police_CaseHelper/appsettings.json
@@ -6,8 +6,12 @@
     }
   },
   "AllowedHosts": "*",
+  //Jessica
   "ConnectionStrings": {
-    //"ApplicationDbContextConnection": "Server=LAPTOP-FJ0CURGI;Initial Catalog=PoliceCaseHelper;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "ApplicationDbContextConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\"C:\\Users\\jessi.LAPTOP-FJ0CURGI\\OneDrive\\Documents\\Projects\\Police_CaseHelper\\Police_CaseHelper\\Database Backup\\Police_CaseHelper.mdf\";Integrated Security=True;Connect Timeout=30"
-  }
+  },
+  //Max - You will need to change this to your connection string
+  //"ConnectionStrings": {
+  //  "ApplicationDbContextConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\"C:\\Users\\jessi.LAPTOP-FJ0CURGI\\OneDrive\\Documents\\Projects\\Police_CaseHelper\\Police_CaseHelper\\Database Backup\\Police_CaseHelper.mdf\";Integrated Security=True;Connect Timeout=30"
+  //}
 }
