Update Header buttons, changed home button name

--- a/Police_CaseHelper/appsettings.json
+++ b/Police_CaseHelper/appsettings.json
@@ -14,4 +14,5 @@
   //"ConnectionStrings": {
   //  "ApplicationDbContextConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\"C:\\Users\\jessi.LAPTOP-FJ0CURGI\\OneDrive\\Documents\\Projects\\Police_CaseHelper\\Police_CaseHelper\\Database Backup\\Police_CaseHelper.mdf\";Integrated Security=True;Connect Timeout=30"
   //}
+  //test
 }
