Made a note about the connection string will need to be changed based on where the db is stored, whether it be on a server or local host etc.

--- a/Police_CaseHelper/appsettings.json
+++ b/Police_CaseHelper/appsettings.json
@@ -6,13 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  //Jessica
+  //This will be need to be changed to whereever you store the Database, for the application to work
   "ConnectionStrings": {
     "ApplicationDbContextConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\"C:\\Users\\jessi.LAPTOP-FJ0CURGI\\OneDrive\\Documents\\Projects\\Police_CaseHelper\\Police_CaseHelper\\Database Backup\\Police_CaseHelper.mdf\";Integrated Security=True;Connect Timeout=30"
-  },
-  //Max - You will need to change this to your connection string
-  //"ConnectionStrings": {
-  //  "ApplicationDbContextConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=\"C:\\Users\\jessi.LAPTOP-FJ0CURGI\\OneDrive\\Documents\\Projects\\Police_CaseHelper\\Police_CaseHelper\\Database Backup\\Police_CaseHelper.mdf\";Integrated Security=True;Connect Timeout=30"
-  //}
-  //test
+  }
 }
